# third_party_exfatprogs

./: 0001-fsck-fix-out-of-bounds-write-in-read_file_dentry_set.patch  BUILD.gn  NEWS  OAT.xml  README.OpenSource  bundle.json
.github/workflows/: c-cpp.yml
defrag/: Makefile.am  defrag.c  defrag.h
dump/: dump.c
exfat2img/: exfat2img.c
fsck/: fsck.c  fsck.h  repair.c  repair.h
include/: exfat_dir.h  exfat_fs.h  exfat_ondisk.h  libexfat.h  upcase_table.h  utils.h  version.h
label/: label.c
lib/: Makefile.am  exfat_dir.c  exfat_fs.c  libexfat.c  utils.c
manpages/: defrag.exfat.8  dump.exfat.8  fsck.exfat.8  mkfs.exfat.8
mkfs/: mkfs.c  mkfs.h  upcase.c
tests/: test_fsck.sh
tests/bad_bitmap_size/: exfat.img.tar.xz
tests/unused-dentries/: exfat.img.tar.xz
tests/upcase_table/: 0001-TableChecksum-and-upcase-table.sh  0002-FirstCluster.sh  0003-DataLength.sh  0004-EntryType.sh
tune/: tune.c
