# Copyright (c) 2022 Huawei Device Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

import("//build/ohos.gni")

group("exfatprogs") {
  deps = [
    ":fsck.exfatprogs",
    ":mkfs.exfatprogs",
  ]
}

config("exfat-defaults") {
  cflags = [
    "-std=gnu99",
    "-Wno-error",
    "-D_FILE_OFFSET_BITS=64",
    "-DPACKAGE=\"exfatprogs\"",
    "-DVERSION=\"1.1.3\"",
  ]
  include_dirs = [
    "dump",
    "fsck",
    "include",
    "label",
    "mkfs",
    "tune",
  ]
}

ohos_shared_library("libexfatprogs") {
  configs = [ ":exfat-defaults" ]
  sources = [ "lib/libexfat.c" ]

  include_dirs = [ "./libexfat" ]

  deps = []
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}

###################################################
##Build mkfs.exfatprogs
ohos_executable("mkfs.exfatprogs") {
  configs = [ ":exfat-defaults" ]
  sources = [
    "mkfs/mkfs.c",
    "mkfs/upcase.c",
  ]

  include_dirs = [
    "./lib",
    "./mkfs",
  ]

  deps = [ ":libexfatprogs" ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}

###################################################
##Build fsck.exfatprogs
ohos_executable("fsck.exfatprogs") {
  configs = [ ":exfat-defaults" ]
  sources = [
    "fsck/de_iter.c",
    "fsck/fsck.c",
    "fsck/repair.c",
  ]

  include_dirs = [
    "./lib",
    "./mkfs",
    "./fsck",
  ]

  deps = [ ":libexfatprogs" ]
  install_enable = true
  subsystem_name = "filemanagement"
  part_name = "storage_service"
  install_images = [ "system" ]
}

###################################################
##Build dump.exfatprogs
ohos_executable("dump.exfatprogs") {
  configs = [ ":exfat-defaults" ]
  sources = [ "dump/dump.c" ]

  include_dirs = [
    "./lib",
    "./mkfs",
    "./fsck",
    "./dump",
  ]

  deps = [ ":libexfatprogs" ]
  subsystem_name = "filemanagement"
  part_name = "storage_service"
}

###################################################
##Build exfatprogslable
ohos_executable("exfatprogslable") {
  configs = [ ":exfat-defaults" ]
  sources = [ "label/label.c" ]

  include_dirs = [
    "./lib",
    "./mkfs",
    "./fsck",
    "./label",
  ]

  deps = [ ":libexfatprogs" ]
  subsystem_name = "filemanagement"
  part_name = "storage_service"
}

###################################################
##Build tune.exfatprogs
ohos_executable("tune.exfatprogs") {
  configs = [ ":exfat-defaults" ]
  sources = [ "tune/tune.c" ]

  include_dirs = [
    "./lib",
    "./mkfs",
    "./fsck",
    "./label",
  ]

  deps = [ ":libexfatprogs" ]
  subsystem_name = "filemanagement"
  part_name = "storage_service"
}
